--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "chart.js": "^4.4.8",
-    "framer-motion": "^12.6.3",
+    "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.11.3",
+    "lucide-react": "^0.510.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^2.15.3",
+    "tailwind-variants": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
